<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="TODO"
            android:src="@drawable/ic_whatsapp" />

        <EditText
            android:textColorHint="@color/colorPrimary"


            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="9dp"
            android:textColor="@color/colorPrimary"
            android:textIsSelectable="true"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:textColorHint="@color/colorPrimary"
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/gmail"
            android:inputType="textEmailAddress"
            android:padding="9dp"
            android:textColor="@color/colorPrimary"
            android:textIsSelectable="true"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:textColorHint="@color/colorPrimary"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/password"

            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/colorPrimary"
            android:textIsSelectable="true"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/alreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="3dp"
            android:text="@string/already_have_account"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:typeface="sans" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button"
            app:cornerRadius="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_google"
                android:padding="15dp"
                android:text="@string/google"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cornerRadius="4dp" />

            <Button
                android:id="@+id/btn_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/fb_color"
                android:drawableLeft="@drawable/ic_facebook"
                android:padding="15dp"
                android:text="@string/facebook"
                android:textStyle="bold"
                app:cornerRadius="4dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/signUpPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/name1"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic|bold"

            />

    </LinearLayout>


</LinearLayout>